--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                                  <div class="clientsl_text">
                                     <i><img src="images/clint.jpg" alt="#"/></i>
                                     <h3>Deno <img src="images/icon.png" alt="#"/></h3>
-                                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem IpsumIt is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum</p>
+                                    <p>It is a long established fact that Peter will soon be a great Devops Engineer. The point of using Lorem IpsumIt is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum</p>
                                  </div>
                               </div>
                            </div>
